finality.css
/* ... */
.layout-desktop .raised.recordingButton.singleRecordingButton.emby-button .buttonText {
	padding-left: 1em;
}

.layout-desktop .listItemBody.itemAction.listItemBody-noleftpadding {

}

.layout-desktop #childrenContent .listViewUserDataButtons {

}

.layout-desktop .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .scrollSlider.focuscontainer-x.itemsContainer.animatedScrollX {
  display: flex;
  flex-direction: row;
}


.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .cardText.cardTextCentered.cardText-first {
	font-size: 88%;
	white-space: normal;
}

.layout-desktop .collectionItems {
  position: absolute;
  display: inline-flex;
  top: 8.2em;
  flex-direction: column;
  width: 84.2em !important; /* Set expanded width */
  overflow: scroll; /* Allow scrolling */
  left: 29em;
  height: 39em; /* Set expanded height */
  transition: none; /* Disable transitions */
  z-index: 50;
}

.layout-desktop #itemDetailPage .collectionItems .itemsContainer.collectionItemsContainer.vertical-wrap.padded-left.padded-right {
	padding-left: 1em;
}

.layout-desktop #itemDetailPage .collectionItems .card.portraitCard.card-hoverable.card-withuserdata {
	width: 12em;
	margin-bottom: 0em;
	padding-left: 1.4em;
	padding-top: 0em;
}

.layout-desktop #itemDetailPage .collectionItems .cardText-first {
	font-family: inherit;
	text-transform: uppercase;
	font-weight: 700 !important;
	margin-bottom: -0.2em;
}

.layout-desktop #childrenContent .listItemImageButton.itemAction.paper-icon-button-light {
	display: none;
}

.layout-desktop .programGuideSection.verticalSection.detailVerticalSection {
	position: absolute;
	top: 8em;
	width: 94.38em;
	left: 28em;
	height: 40.5em;
	overflow-y: scroll;
	scroll-snap-type: y mandatory;
}

.layout-desktop .programGuideSection .listItem.listItem-border {
	scroll-snap-align: start;
}

.layout-desktop .cardImageContainer.coveredImage.cardContent.itemAction.lazy.lazy-image-fadein-fast,
.layout-desktop .cardImageContainer.cardContent.itemAction.lazy.lazy-image-fadein-fast {
	border-radius: 0.5em;
}

#childrenContent .starRatingContainer.mediaInfoItem {
	display: none;
}

.layout-desktop #itemDetailPage .detailSectionContent {
    max-height: 16em;
    overflow-y: auto;
    box-sizing: border-box;
	padding-right: 1em;
}

/* --- nxllxvxxd edits --- */

/* Change text box selected outline color */
.emby-input:focus,
.emby-textarea:focus {
	border-color: red;
	border-width: 2px;
	transition: border-color 0.3s ease-in-out, border-width 0.3s ease-in-out;
	box-shadow: 0 0 5px red, 0 0 10px red;
}

/*Link color and behavior*/
.button-link {
	color: white;
}
.button-link:hover {
	-webkit-text-decoration: none;
	color: red !important;
}

/* lyrics */
.layout-desktop #lyricsSection .vertical-list.itemsContainer {
	position: fixed;
	top: 35.55em;
	left: 1.72em;
	z-index: 2;
	max-height: calc(100vh - 41.5em);
	display: block;
	overflow-y: auto;
	padding-right: 0em;
	background: #02000696;
	text-align: center;
	border-radius: 0.25em;
	width: 27.2em;
}

/*Item details page hover animations*/
.layout-desktop #itemDetailPage .cardScalable .cardImageContainer {
	transition: transform 0.15s ease;
	display: inline-block;
}

.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .emby-scrollbuttons.padded-right {
	position: fixed;
	font-size: 1.2em;
	left: 1.4em;
	top: calc(100vh - 12.9em);
	margin-bottom: 5em;
	height: 0.5em;
	width: 6em;
	z-index: 5;
}
.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .emby-scrollbuttons-button.paper-icon-button-light {
	padding-left: 9em;
	padding-bottom: 0.5em;
	font-size: 1.2em;
}
.layout-desktop #itemDetailPage .emby-scrollbuttons-button > .material-icons {
	font-size: 1.25em;
}

.upNextContainer {
	background-color: rgba(0, 0, 0, 0.5);
  bottom: 0;
  color: #fff;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  padding: 1em;
  position: fixed;
  right: 0;
  transition: opacity .3s ease-out;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 30em;
  will-change: transform,opacity;
  -webkit-touch-callout: none;
  border-radius: 1em;
  font-size: 80%;
}

.upNextDialog {
	
}

.upNextDialog-button {
	background: black !important;
	color: #fff !important;
	border: 2px solid white;
	border-radius: 0.65em;
	margin-right: 4.36em;
	padding-right: 3em;
	padding-left: 3em;
	text-transform: uppercase;
}

.upNextDialog-button:hover {
	background: white !important;
	color: black !important;
	border: 2px solid black;
}

.upNextContainer.upNextDialog .starRatingContainer.mediaInfoItem {
	opacity: 0;
}

.layout-desktop #homeTab .itemsContainer.padded-left.padded-right.vertical-wrap.focuscontainer-x {
	justify-content: center;
	width: 100vw;
}

/* --- Skip Button --- */

.skip-button {

}

.upNextContainer {
}

#skipIntro.upNextContainer {
}

#skipIntro {

}

#skipIntro.show .emby-button {
}

#btnSkipSegmentText {
}

#skipIntro .emby-button:hover, #skipIntro .emby-button:focus {

}

#skipIntro .emby-button {

}

/*Change Intro Skip Color*/
.skip-button {
	bottom: 7.52em;
	right: 7.5em;
	color: #fff;
	background: #000;
	border: 1px solid white;
	border-radius: 0;
	padding: 0.5em 1em;
	transition: background 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
}

.skip-button:hover,
.skip-button:focus {
	background: #fff;
	color: #000;
	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
}
/* ... */

